# twine-anansi-bridge

./: .gitignore  .gitmodules  .travis.yml  Makefile.am  README.md  anansi-handler.c  bridge.c  configure.ac  file.c  handler.c  mq.c  p_anansi-plugin.h  plugin.c  s3.c
debian/: control  rules  twine-anansi-bridge.install
